--- a/DiscoverCluj/app/src/main/res/layout/activity_main.xml
+++ b/DiscoverCluj/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -59,6 +60,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -68,14 +70,14 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:id="@+id/image_button_1"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="45dp"
             android:background="@drawable/rounded_button"
             android:contentDescription="@string/button_1"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:padding="10dp"
             android:scaleType="fitCenter"
             android:src="@drawable/map"
