settings updated - location permission

--- a/DiscoverCluj/app/src/main/res/layout/activity_main.xml
+++ b/DiscoverCluj/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:textAlignment="center"
         android:textColor="@color/title_colour"
         android:textSize="55sp"
+        android:fontFamily="@font/yanonekaffeesatz_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +58,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/title_beautify" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
