--- a/DiscoverCluj/app/src/main/res/layout/activity_main.xml
+++ b/DiscoverCluj/app/src/main/res/layout/activity_main.xml
@@ -43,13 +43,11 @@
         android:textAlignment="center"
         android:textColor="@color/title_colour"
         android:textSize="55sp"
-        android:fontFamily="@font/yanonekaffeesatz_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -58,11 +56,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/title_beautify" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -72,14 +68,14 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:id="@+id/image_button_1"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="45dp"
             android:background="@drawable/rounded_button"
             android:contentDescription="@string/button_1"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:padding="10dp"
             android:scaleType="fitCenter"
             android:src="@drawable/map"
