--- a/DiscoverCluj/app/src/main/res/layout/open_settings.xml
+++ b/DiscoverCluj/app/src/main/res/layout/open_settings.xml
@@ -79,8 +79,7 @@
                 android:layout_height="66dp"
                 android:layout_column="0"
                 android:layout_margin="2dp"
-                android:fontFamily="@font/yanonekaffeesatz_bold
-"
+                android:fontFamily="@font/yanonekaffeesatz_bold"
                 android:gravity="center_vertical"
                 android:singleLine="false"
                 android:text="@string/settings_About"
