--- a/DiscoverCluj/app/src/main/res/values/ids.xml
+++ b/DiscoverCluj/app/src/main/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
     <item name="settings_version_details" type="id"/>
 </resources>
